# dvector

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  dvector.c  dvector.h
test/: CMakeLists.txt  test_alloc_dealloc.c  test_max_min.c  test_norm.c  test_ops.c  test_push_get.c
